== Master

New:
* Support watermarking (thanks smoothdvd)

Improvements:
* Allow parenthesis in colorspace (thanks walterdavis for initial code and rociiu for finding a bug with it)

== 1.0.0 2013-07-08

New:
* Bumped target ffmpeg version to 1.2.1

Improvements:
* Simpler implementation for timeouts.
  Should be far less cpu and memory dependent (don't spawn a thread for every line of output)
  Timeout spec now passes in Rubinius (using 1.9 mode)
* Give helpful error message for windows users lacking the win32-process gem (thanks casoetan)
* Add Movie#container (thanks vitalis)
* Support vprofile and preset encoding options (thanks vitalis)

Changes:
* Default timeout lowered to 30 seconds

Bugs:
* Avoid crash if asking for frame_rate of a video without video stream (thanks squidarth)
* Fix crash when doing audio transcoding on ffmpeg >= 1.0.1 (thanks vitalis)

Deprecations:
* Removed support for Ruby 1.8
* Removed support for ffmpeg 0.7

Refactorings:
* Quite a few, see commit history for details.

== 0.9.0 2012-07-24

New:
* Bumped target ffmpeg version to 0.11.1
* Add hung process detection with configurable timeout (thanks stakach)
* Raise FFMPEG::Error instead of generic RuntimeError on failed transcodings
* Movie#screenshot for more intuitive screenshotting (README has details)
* Movie#creation_time and Movie#rotation attributes when metadata is available (thanks Innonate)

Bugs:
* Fixed too many open files bug (thanks to akicho8)
* Fixed missing path escaping (thanks to mikesager)
* Fixed README typo (thanks to Linutux)
* Files outputing "could not find codec parameters" are now recognized as invalid

Deprecations:
* Removed Movie#uncertain_duration?
* Removed all the deprecated crop options (use :custom => '-vf crop=x:x:x:x' if you need it)

Refactorings:
* Removed the deprecated duration validation code
* Polish on the transcoder class
* Polish on the spec suite

== 0.8.5 2011-03-05
